--- a/Elmla3eb/Info.plist
+++ b/Elmla3eb/Info.plist
@@ -66,7 +66,7 @@
 		<true/>
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Profile image</string>
+	<string>To Display Your Profile Image</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
