--- a/Elmla3eb/Info.plist
+++ b/Elmla3eb/Info.plist
@@ -71,6 +71,7 @@
 	<string>To Display Your Profile Image</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
