--- a/Elmla3eb/Info.plist
+++ b/Elmla3eb/Info.plist
@@ -41,16 +41,16 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb1115033688623873</string>
+				<string>fb1865032570443095</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>0.0.1</string>
 	<key>FacebookAppID</key>
-	<string>1115033688623873</string>
+	<string>1865032570443095</string>
 	<key>FacebookDisplayName</key>
-	<string>Elmal3eb</string>
+	<string>نخبة الملاعب</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
